# rfcensus

./: LICENSE  README.md  pyproject.toml
rfcensus/: __init__.py  __main__.py  cli.py
rfcensus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rfcensus/analysis/: __init__.py  tracker.py  validator.py
rfcensus/commands/: __init__.py  _frequency_guide.py  base.py  baseline.py  diff.py  doctor.py  export.py  guided.py  init.py  inventory.py  list.py  monitor.py  pin.py  serialize.py  setup.py  suggest.py
rfcensus/config/: __init__.py  loader.py  schema.py
rfcensus/config/builtin/: antennas.toml  bands_us.toml
rfcensus/decoders/: __init__.py  base.py  blind_probe.py  lazy_pipeline.py  lora_native.py  meshtastic_native.py  meshtastic_pipeline.py  passband_detector.py  passband_state_native.py  registry.py  shared_channelizer.py
rfcensus/decoders/_native/lora/: Makefile  README.md  lora_channelizer.c  lora_channelizer.h  lora_chirp.c  lora_codec.c  lora_dechirp_simd.h  lora_demod.c  lora_demod.h  lora_fft.h  lora_fft_kiss.c  lora_fft_pffft.c  lora_internal.h  lora_probe.c  lora_probe.h  test_decode.c  test_synth.c
rfcensus/decoders/_native/meshtastic/: Makefile
rfcensus/decoders/_native/meshtastic/src/: mesh_aes128_block.c  mesh_aes256_block.c  mesh_aes_adapter.c  meshtastic.h  meshtastic_capi.cpp  meshtastic_capi.h  meshtastic_channel.h  meshtastic_config.h  meshtastic_crypto.h  meshtastic_packet.h  meshtastic_pb.h  meshtastic_pki.h  meshtastic_radio.h
rfcensus/decoders/_native/meshtastic/tests/: test_capi.cpp
rfcensus/decoders/_native/passband/: Makefile  passband_state.c  passband_state.h
rfcensus/decoders/builtin/: __init__.py  direwolf.py  meshtastic.py  multimon.py  rtl_433.py  rtl_ais.py  rtlamr.py
rfcensus/detectors/: __init__.py  base.py  registry.py
rfcensus/detectors/builtin/: __init__.py  lora.py  p25.py  wifi_bt.py
rfcensus/engine/: __init__.py  confirmation_queue.py  confirmation_task.py  coverage.py  dispatcher.py  lora_survey_task.py  pin_session.py  pinning.py  scheduler.py  session.py  session_control.py  strategy.py
rfcensus/events/: __init__.py  bus.py  events.py
rfcensus/hardware/: __init__.py  antenna.py  antenna_suggestion.py  broker.py  dongle.py  fleet_optimizer.py  health.py  registry.py  rtl_tcp_fanout.py  serialization.py
rfcensus/hardware/drivers/: __init__.py  hackrf.py  rtlsdr.py
rfcensus/reporting/: __init__.py  payload_format.py  privacy.py  report.py
rfcensus/reporting/formats/: __init__.py  json.py  text.py
rfcensus/spectrum/: __init__.py  backend.py  channel_plans.py  chirp_analysis.py  classifier.py  in_window_survey.py  iq_capture.py  noise_floor.py  occupancy.py  wide_channel_aggregator.py
rfcensus/spectrum/backends/: __init__.py  hackrf_sweep.py  rtl_power.py
rfcensus/storage/: __init__.py  db.py  models.py  repositories.py  retention.py  schema.py  writer.py
rfcensus/tools/: decode_meshtastic.py  dsp.py  fm_bridge.py
rfcensus/tui/: app.py  color.py  proc_stats.py  state.py
rfcensus/tui/widgets/: dongle_detail.py  dongle_strip.py  event_stream.py  footer.py  header.py  meshtastic_recent.py  modals.py  plan_tree.py
rfcensus/utils/: async_subprocess.py  hashing.py  iq_reader.py  iq_ring.py  iq_source.py  logging.py  meshtastic_hop.py  meshtastic_region.py  orphan_detect.py  paths.py  pcap_loratap.py  rate_limiter.py  tcp.py
scripts/: install_decoders.sh
tests/: conftest.py
tests/fixtures/: meshtastic_real_903mhz_longmoderate.manifest.json  meshtastic_real_907mhz_longfast.manifest.json  meshtastic_real_913_5mhz.manifest.json  meshtastic_real_918mhz_shortfast.manifest.json
tests/unit/: _dsp_fixtures.py  test_analysis.py  test_channel_plans.py  test_chirp_analysis_v0542.py  test_config_and_antennas.py  test_confirmation_queue.py  test_confirmation_task.py  test_coverage_report.py  test_decoder_parsers.py  test_detectors.py  test_dsp.py  test_duplicate_serials.py  test_fm_bridge.py  test_health_checks.py  test_in_window_survey.py  test_serialization.py  test_session_duration.py  test_setup_new.py  test_setup_wizard.py  test_spectrum_and_events.py  test_storage_writers.py  test_utils.py  test_v050.py  test_v051.py  test_v0510.py  test_v0511.py  test_v0512.py  test_v0513.py  test_v0514.py  test_v0515.py  test_v0516.py  test_v0517.py  test_v0518.py  test_v0519.py  test_v052.py  test_v0520.py  test_v0521.py  test_v0530.py  test_v0533.py  test_v0535.py  (+62 more)
