[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rfcensus"
version = "0.5.41"
description = "A site survey and inventory tool for the RF environment around you"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "John Stockdale" },
]
keywords = [
    "sdr",
    "rtl-sdr",
    "hackrf",
    "spectrum",
    "rf",
    "site-survey",
    "rtl_433",
    "rtlamr",
    "ads-b",
    "ais",
    "pocsag",
    "aprs",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.5",
    "tomli-w>=1.0",
    "rich>=13.7",
    "numpy>=1.26",
    "scipy>=1.11",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.2",
]

[project.scripts]
rfcensus = "rfcensus.cli:main"

[project.urls]
Homepage = "https://github.com/jstockdale/rfcensus"
Repository = "https://github.com/jstockdale/rfcensus"
Issues = "https://github.com/jstockdale/rfcensus/issues"

[tool.setuptools.packages.find]
include = ["rfcensus*"]

[tool.setuptools.package-data]
"rfcensus.config.builtin" = ["*.toml"]
"rfcensus.reporting.templates" = ["*.html.j2", "*.txt.j2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
